--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,77 @@
-.App {
-  text-align: center;
-}
+/*
 
-.App-logo {
-  height: 40vmin;
-}
+  All top-level styling instruction here. All base styling of each HTML element can be found here.
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+*/
 
-.App-link {
-  color: #09d3ac;
-}
+
+@import url('https://rsms.me/inter/inter.css');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300, 400,900|Roboto:300, 400,900|IBM+Plex+Sans:200,300,400,900');
+  body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    padding: 0;
+    background: #222;
+    font-size: 16px;
+  }
+
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+      monospace;
+  }
+
+  button:focus {outline:0 !important;}
+
+  h1 {
+    font-family: 'Inter', sans-serif;;
+    font-size: 48px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 26.4px;
+  }
+  h2 {
+    font-family: 'Inter', sans-serif;;
+    font-size: 32px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 20.4px;
+
+  }
+
+  h3 {
+    font-family: 'Inter', sans-serif;;
+    font-size: 28px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 15.4px;
+  }
+  p {
+    font-family: 'Inter', sans-serif;;
+    font-size: 16px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 20px;
+  }
+  blockquote {
+    font-family: 'Inter', sans-serif;;
+    font-size: 21px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 30px;
+  }
+  pre {
+    font-family: 'Inter', sans-serif;;
+    font-size: 13px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 18.5714px;
+  }
