--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,10 @@
       monospace;
   }
 
-
-
-
   button:focus {outline:0 !important;}
 
   h1 {
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
     font-size: 48px;
     font-style: normal;
     font-variant: normal;
@@ -37,7 +34,7 @@
     line-height: 26.4px;
   }
   h2 {
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
     font-size: 32px;
     font-style: normal;
     font-variant: normal;
@@ -47,7 +44,7 @@
   }
 
   h3 {
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
     font-size: 28px;
     font-style: normal;
     font-variant: normal;
@@ -55,7 +52,7 @@
     line-height: 15.4px;
   }
   p {
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-variant: normal;
@@ -63,7 +60,7 @@
     line-height: 20px;
   }
   blockquote {
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
     font-size: 21px;
     font-style: normal;
     font-variant: normal;
@@ -71,7 +68,7 @@
     line-height: 30px;
   }
   pre {
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
     font-size: 13px;
     font-style: normal;
     font-variant: normal;
