--- a/src/components/__template__/component.js.hbs
+++ b/src/components/__template__/component.js.hbs
@@ -2,12 +2,10 @@ import React from 'react'
 import PropTypes from 'prop-types'
 
 /**
-* Describe your component
-*/
-function {{pascalCase name}} () {
-return (
-<>{{pascalCase name}}</>
-)
+ * Describe your component
+ */
+function {{pascalCase name}}() {
+  return <>{{pascalCase name}}</>
 }
 
 {{pascalCase name}}.propTypes = {}
